Fix dark mode switcher on mobiles and improve logo on mobiles

--- a/src/scss/components/_search-overlay.scss
+++ b/src/scss/components/_search-overlay.scss
@@ -332,6 +332,7 @@
 
     &:after {
       content: '';
+      position: absolute;
       width: 100%;
       height: 50%;
       left: 0;
