--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1930,6 +1930,7 @@ table {
     transition: transform 0.25s cubic-bezier(0.645, 0.045, 0.355, 1); }
     .is-lights-button a:after {
       content: '';
+      position: absolute;
       width: 100%;
       height: 50%;
       right: 0;
@@ -3357,3 +3358,11 @@ ul.menu,
   --current-light-primary: var(--sm-light-primary);
   --current-light-secondary: var(--sm-light-secondary);
   --current-light-tertiary: var(--sm-light-tertiary); }
+
+@media not screen and (min-width: 1000px) {
+  .user-dark-mode .c-logo__default {
+    opacity: 0; }
+  .user-dark-mode .site-header-mobile--scrolled .site-header--mobile .c-logo__default {
+    opacity: 0; }
+  .user-dark-mode .site-header-mobile--scrolled .site-header--mobile .c-logo__inverted {
+    opacity: 1; } }
